updated data cleaning workshop

--- a/Workshops/Data Cleaning -- Python Workshops.ipynb
+++ b/Workshops/Data Cleaning -- Python Workshops.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,18 +237,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "| Variable | Definition | Key |\n",
-    "| ---| ---| ---|\n",
-    "| Survived | Survival | 0 = No, 1 = Yes |\n",
-    "| Pclass | Ticket Class | 1 = 1st, 2 = 2nd, 3 = 3rd |\n",
-    "| Sex | Male or Female | |\n",
-    "| Age | Age in Years | |\n",
-    "| Sibsp | # of siblings / spouses aboard the Titanic |  |\n",
-    "| Parch | # of parents / children aboard the Titanic|  |\n",
-    "| Ticket | # of parents / children aboard the Titanic|  |\n",
-    "| Fare | Passenger Fare|  |\n",
-    "| Cabin | Cabin Number|  |\n",
-    "| Embarked | Port of Embarkation| C = Cherbourg, Q = Queenstown, S = Southampton |\n",
+    "![Titanic documentation](https://github.com/varunsatish/Coding-Tutorials/blob/master/images/titanic_doc.jpg?raw=true) \n",
+    "\n",
     "\n",
     "**Note**: We have modifed the datset from the original just so that it fits into our tutorial a little easier.\n"
    ]
