updated data cleaning ws

--- a/Workshops/Data Cleaning -- Python Workshops.ipynb
+++ b/Workshops/Data Cleaning -- Python Workshops.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we will need to read the data into Python. Since we are working with a .csv file we will use Pandas. Generally, any time we use an 'excel' like data source, we utilise the Pandas library."
+    "First, we will need to read the data into Python. Since we are working with a .csv file we will use Pandas. Generally, any time we use an 'excel' like data source, we utilise the Pandas library. Note that the variable df stands for _DataFrame_ and is a convention in the Python community."
    ]
   },
   {
@@ -43,7 +43,9 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "#need to find a way to import the data from a remote source -- maybe canvas -- Make some of the Fares NAN for later examle\n",
+    "#need to find a way to import the data from a remote source -- maybe canvas -- Make some of the Fares NAN for later example\n",
+    "\n",
+    "# Chris: You could put the data source on github and load it in through this. Canvas and getting them to learn about local directing may also be an alternative.\n",
     "\n",
     "df = pd.read_csv('/Users/varunsatish/Documents/GitHub/Coding-Tutorials/Data/titanic.csv')"
    ]
@@ -52,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can use the `head()` function to display the first 5 rows of the DataFrame. This allows us to get an idea of what the data looks like."
+    "We can use the `head()` function to display the first 5 rows of the DataFrame by default. This allows us to get an idea of what the data looks like."
    ]
   },
   {
@@ -211,6 +213,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "You can specify how many rows you would like to view by passing the number in as an argument."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Likewise the `tail()` command gives us the last 5 rows of the dataframe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.tail()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "What are some of the problems you can see? What do we need to deal with?"
    ]
   },
@@ -255,7 +289,7 @@
     "\n",
     "Sometimes it may be appropriate to just fill these values with 0, other times it may be more appripriate to fill these values with some form of imputation (meaning, some sort of calculated value). The `numpy` package is really useful for these sorts of applications. \n",
     "\n",
-    "As we can see, the `Age` category contains some missing values. It doesn't really make sense to fill in these missing values with a 0, instead we may want to fill in these values with the average. There are many ways we can do this, however the `numpy` method is extremley quick and elegant."
+    "As we can see, the `Age` category contains some missing values. It doesn't really make sense to fill in these missing values with a 0, instead we may want to fill in these values with the average. There are many ways we can do this, however the `numpy` method is extremely quick and elegant."
    ]
   },
   {
@@ -416,11 +450,15 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "ave_age = df['Age'].sum()/len(df['Age']) #.sum() sums down column of a dataframe\n",
-    "#strictly speaking we should divide by length of values that are not NaN\n",
-    "#this is purely illustrative, not necessarily statistically accurate\n",
+    "\"\"\"\n",
+    "Strictly speaking we should divide by length of values that are not NaN.\n",
+    "This is purely illustrative, not necessarily statistically accurate\n",
+    "\"\"\"\n",
     "\n",
-    "df['Age'] = df['Age'].fillna(ave_age) #filling all NaN values with average age\n",
+    "ave_age = df['Age'].sum()/len(df['Age'])  # .sum() sums down column of a dataframe\n",
+    "\n",
+    "\n",
+    "df['Age'] = df['Age'].fillna(ave_age)  # Filling all NaN values with average age\n",
     "\n",
     "df.head()    "
    ]
@@ -581,11 +619,11 @@
     }
    ],
    "source": [
-    "df['Age'] = [int(age) for age in df['Age']] #for every age in the column, turn it into an integer\n",
+    "df['Age'] = [int(age) for age in df['Age']]  # For every age in the column, turn it into an integer\n",
     "\n",
-    "#alternativley\n",
+    "# An alternative method:\n",
     "\n",
-    "df['Age'].astype(int) #produces the same output, the above code is a little more general\n",
+    "df['Age'].astype(int)  # Produces the same output. The code above is a generalised form.\n",
     "\n",
     "df.head()"
    ]
@@ -1117,6 +1155,8 @@
     }
    ],
    "source": [
+    "# Chris: I don't think it is a good idea to introduce RegEx here as this is not quite a clear example of RegEx. \n",
+    "# Usually you would use the Re library for RegEx.\n",
     "df['Cabin'] = [x[1:] for x in df['Cabin'].astype(str)]\n",
     "df.head()"
    ]
@@ -1128,9 +1168,19 @@
     "## Exercises\n",
     "\n",
     "1. Construct a dummy variable named `Male` that is equal to `1` if the observation is `male` and `0` otherwise\n",
-    "2. Capitalise the `Sex` column\n",
-    "3. Change the letters designating the `Embarked` column to their 'true' values (as per the documentation).\n"
+    "2. Capitalise every entry in the `Sex` column\n",
+    "3. Change the letters designating the `Embarked` column to their 'true' values (as per the documentation).\n",
+    "\n",
+    "## Extension Excercise\n",
+    "4. Using the `Age` column and the year of the accident 1912, construct a new column called `DateOfBirth` in the format DD-MM-YYYY using the [datetime](https://www.pythonforbeginners.com/basics/python-datetime-time-examples) library."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
