Added small stuff and excercises for first workshop.

--- a/Workshops/Basics of Programming I -- Python Workshops.ipynb
+++ b/Workshops/Basics of Programming I -- Python Workshops.ipynb
@@ -651,6 +651,180 @@
    "source": [
     "[i/3 for i in y]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Excercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1) Given a list of numbers, find the sum of the list. e.g. [4, 3, 2, 1] = 10.\n",
+    "\n",
+    "#### 2) Given a list of numbers, create a new list that divides each element in the original list by 2. e.g. [6, 5, 3, 2] = [3, 2.5, 1.5, 1]\n",
+    "\n",
+    "#### 3) Sum, subtract, divide, and multiply 2 numpy arrays together. This [link](https://www.datacamp.com/community/tutorials/python-numpy-tutorial) will help."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Extension - Input"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In programming, it's quite customary for users to be able to enter in input. An example would be when logging into Canvas, as a user, you can input in your unikey and password. The command to do this is `input()` in Python and this will accept a string from a user. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is input.\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_input = input()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is input.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(my_input)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Something to be careful of is that even when you enter in a number, it is still considered a string by Python so you will need to convert it first to a number by either the `int()` or `float()` command."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "string_input = input()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(string_input))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can see it is a string even though `55` is a number. We need to use the `int()` command."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int_input = int(string_input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(int_input)\n",
+    "print(type(int_input))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now with this int, we can do our usual manipulation of numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(int_input/11)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4) Write a program that is able to accept 2 separate inputs from a user and add them together.\n",
+    "#### 5) Write a program that can accept 5 separate inputs from a user and store it into a list."
+   ]
   }
  ],
  "metadata": {
@@ -669,7 +843,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
