addd student notebooks

--- a/Workshops/Basics of Programming II -- Student.ipynb
+++ b/Workshops/Basics of Programming II -- Student.ipynb
@@ -18,22 +18,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Functions, 'for' loops and 'if' statements are by far the most ubiquitous and useful commands in your programming arsenal. They allow us to solve more complicated (and interesting) problems by creating scripts that are both recursive and iterative. They also allow us to make our code more succinct, generalisable and efficient."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Functions\n",
-    "\n",
-    "A function is a piece of resuable code that can be used to perform some sort of action. In Python there are 'built in' functions -- which we have seen above, but there are also *user-defined functions*. These are functions that we write ourselves. Functions in programming are similar to mathematical functions, you take a set of inputs, pass them through the function and get some outputs.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "![For Loop](https://github.com/varunsatish/Coding-Tutorials/blob/master/images/function_dia.jpg?raw=true)"
    ]
   },
@@ -41,8 +25,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to use a function, we must define it with the call `def`, give it a name, and define its inputs.\n",
-    "\n",
     "**NOTE**: When I use the function in practice, my input variable does not have to be the same name as what I specify when I define the function."
    ]
   },
@@ -52,16 +34,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def my_function(x):  # We need to specify a function handle, and some arguments\n",
-    "    y = x**2  # Raises x to the power 2\n",
-    "    return (y)"
+    "#your code here"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This function takes in some object ```x``` as an input, and squares it. It is clear from this then that the object ```x``` must be an integer or float. "
+    "**Example**: Create a function that takes in some object ```x``` as an input, and squares it."
    ]
   },
   {
@@ -81,70 +61,7 @@
     }
    ],
    "source": [
-    "my_function(5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can have functions that take in multiple inputs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def other_function(x , y):\n",
-    "    z = x*y + y**2 + 3 # ** takes a power\n",
-    "    return (z)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "There are two ways to call this function, either I can keep the ordering that has been specified in the function definition, or I can assign values to the inputs directly"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "120"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "number_1 = 4\n",
-    "number_2 = 9\n",
-    "\n",
-    "#ordering kept the same \n",
-    "\n",
-    "other_function(number_1, number_2)\n",
-    "\n",
-    "#inputs specified\n",
-    "\n",
-    "other_function(y = number_2, x = number_1)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Why are functions useful?\n",
-    "\n",
-    "Functions allow us to write code that is compact and efficient. If you are writing code that follows a structured, repeated pattern, it is much easier and much more efficient to define functions. "
+    "#your code here"
    ]
   },
   {
@@ -165,87 +82,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 4, 5]\n"
-     ]
-    }
-   ],
-   "source": [
-    "numbers = [1,2,3,4,5]\n",
-    "print(numbers)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def complex_function(x):\n",
-    "    y = x + x**5 + (3*x - 5)**2\n",
-    "    return(y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6\n",
-      "35\n",
-      "262\n",
-      "1077\n",
-      "3230\n"
-     ]
-    }
-   ],
-   "source": [
-    "for number in numbers:\n",
-    "    out = complex_function(number)\n",
-    "    print(out)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[6, 35, 262, 1077, 3230]\n"
-     ]
-    }
-   ],
-   "source": [
-    "out_list = []\n",
-    "\n",
-    "for x in numbers: #note that the choice of index (in general) does not matter, there are some choices which cause problems but you will recieve an error message  \n",
-    "    out = complex_function(x)\n",
-    "    out_list.append(out)\n",
-    "    \n",
-    "print(out_list)\n",
-    "                    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Why are for loops useful?\n",
-    "\n",
-    "For loops allow us to write code that is *recursive*. This means that for loops allow us to write code that repeats many times. This is useful for many computational exercises, but also things such as data cleaning."
+    "#your code here"
    ]
   },
   {
@@ -296,17 +137,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "numbers = [0,1,2,3,4,5]\n",
-    "\n",
-    "for element in numbers:\n",
-    "    if element == 2: # == is a boolean logical\n",
-    "        print('Great')\n",
-    "    else:\n",
-    "        print('Not Great')"
+    "#your code here"
    ]
   },
   {
@@ -328,35 +163,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This is an example of the code:"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 4, 9, 16, 25]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "output_list = [] #creating an empty list\n",
-    "\n",
-    "inputs = [1,2,3,4,5]\n",
-    "\n",
-    "for i in range(0, len(inputs)):\n",
-    "    output = inputs[i]**(2)\n",
-    "    output_list.append(output)\n",
-    "    \n",
-    "print(output_list)"
+    "#your code here"
    ]
   },
   {
@@ -399,61 +211,6 @@
     "\n",
     "\n",
     "Define a function that will calculate $\\hat{\\beta}$ for a given list of $x = [x_1, x_2 \\dots x_n]$ and $y = [y_1, y_2 \\dots y_n]$. **Hint**: Try to think about what we are actually doing if we were to do this by hand, we calculate $(x_1 - \\bar{x})(y_1 - \\bar{y}), (x_2 - \\bar{x})(y_2 - \\bar{y}) \\dots (x_n - \\bar{x})(y_n - \\bar{y})$ and $(x_1 - \\bar{x})^2, (x_2 - \\bar{x})^2 \\dots (x_n - \\bar{x})^2$ then take sums and divide."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution.\n",
-    "\n",
-    "# Question one.\n",
-    "\n",
-    "def compute_y_hat(beta, x):\n",
-    "    y_hat = beta*x\n",
-    "    return(y_hat)\n",
-    "\n",
-    "# Question two.\n",
-    "\n",
-    "x = [1. -5, 9, 4, 1, -3]\n",
-    "y = []\n",
-    "\n",
-    "for x_i in x:\n",
-    "    y.append(compute_y_hat(0.43, x_i)) \n",
-    "    \n",
-    "    \n",
-    "\n",
-    "\n",
-    "# Advanced.\n",
-    "\n",
-    "# Numpy is a package that allows for mathematical computation.\n",
-    "import numpy as np\n",
-    "\n",
-    "def beta_hat(x,y):\n",
-    "    # Finding the means -- we use a package known as numpy, typically read in as np.\n",
-    "    x_bar = np.mean(x)\n",
-    "    y_bar = np.mean(y)\n",
-    "    \n",
-    "    # Creating empty lists so that we can store individual numerators and denominators.\n",
-    "    numerator_list = []\n",
-    "    denominator_list = []\n",
-    "    for i in range(len(x)):\n",
-    "        # For each individual calculate the numerator\n",
-    "        numerator = (x[i] - x_bar)*(y[i] - y_bar)\n",
-    "        # For each individual calculate the denominator\n",
-    "        denominator = (x[i] - x_bar)**2\n",
-    "        # Store both the numerator and denominator in lists\n",
-    "        numerator_list.append(numerator)\n",
-    "        denominator_list.append(denominator)\n",
-    "        # Take the sum of all the individual numerators and denominators to find beta hat\n",
-    "    b = sum(numerator_list)/(denominator_list)\n",
-    "    # Return the output, this is outside of the loop\n",
-    "    return(b)\n",
-    "\n",
-    "        \n",
-    "        "
    ]
   }
  ],
