took out usyd references

--- a/Workshops/Basics of Programming II -- Python Workshops.ipynb
+++ b/Workshops/Basics of Programming II -- Python Workshops.ipynb
@@ -258,18 +258,18 @@
     "\n",
     "We can do a similar thing with programming. When we initialise a for loop we need to tell the for loop which objects it must operate on. When I have an initialisation that looks like `for <element> in <list>:`, I am telling the loop that I want to operate on each object within the list. \n",
     "\n",
-    "Lets say that we have a list that looks like this: `ECMT_3160 = ['Lea', 'Tommy', 'Pat', 'Chris']`. We have seen already that we can 'index' a list, meaning I can draw out the $i^{th}$ element of the list. `ECMT_3160[1] = 'Tommy'`. Depending on what we are trying to achieve, we may want to iterate over each **object** within the list or we may want to iterate over each **index** within the list. What does this mean?\n",
+    "Lets say that we have a list that looks like this: `ECMT_Friends = ['Lea', 'Tommy', 'Pat', 'Chris']`. We have seen already that we can 'index' a list, meaning I can draw out the $i^{th}$ element of the list. `ECMT_Friends[1] = 'Tommy'`. Depending on what we are trying to achieve, we may want to iterate over each **object** within the list or we may want to iterate over each **index** within the list. What does this mean?\n",
     "\n",
     "Suppose I want to print each element in the list, I can write one piece of code that will look like:\n",
     "\n",
-    "`for name in ECMT_3160:\n",
+    "`for name in ECMT_Friends:\n",
     "    print(name) `\n",
     "\n",
     "This is iterating over each object within the list, note that it has nothing to do with the indexes. It simply prints each object. \n",
     "\n",
     "We could also specify the for loop in the following way\n",
     "\n",
-    "`for i in range(0, len(ECMT_3160)):\n",
+    "`for i in range(0, len(ECMT_Friends)):\n",
     "    print(ECMT_3160[i])`\n",
     "    \n",
     "Here, we are not iterating over each object in the list, we are iterating over a set of numbers which we can use to index objects within the list.\n",
